--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "gulp": "^3.8.1",
     "gulp-autoprefixer": "0.0.7",
     "gulp-concat": "^2.2.0",
-    "gulp-imagemin": "~0.6.1",
+    "gulp-imagemin": "^0.6.1",
     "gulp-jade": "~0.6.0",
     "gulp-jshint": "^1.6.3",
-    "gulp-livereload": "~2.1.0",
-    "gulp-minify-css": "~0.3.4",
-    "gulp-plumber": "~0.6.3",
+    "gulp-jslint": "^0.1.0",
+    "gulp-livereload": "^2.1.0",
+    "gulp-minify-css": "^0.3.4",
+    "gulp-plumber": "^0.6.3",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^0.7.2",
     "gulp-uglify": "^0.3.0",
-    "gulp-watch": "~0.6.6-1",
+    "gulp-watch": "^0.6.6-1",
     "tiny-lr": "0.0.7"
   }
 }
